plugin/src/test/resources/annotator/perl/unreachableCode/callDieFirst.code
foo die("something"), "<error descr="Unreachable code">Else</error>";